--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
               <h1> 🔺keju</h1>
             </div>
 
-            <form action="">
+           <form action="index.html" method="post">
                 <label for="email">Email or Username</label>
-                <input type="text">
+                <input type="text" id="username">
 
-                <label for="email">Password</label>
-                <input type="password">
+                <label for="password">Password</label>
+                <input type="password" id="password">
 
                
                 <a href="#">Forgot Password?</a>
 
-                 <button>Sign In</button>
+                 <input type="submit" value="Sign-In" id="signin" onclick="verify()">
 
 
                 <p>New to AKEJU? <a href="#">Sign Up!</a></p>
